# VXForge

./: .gitignore  CMakeLists.txt
Engine/: compile_shaders.bat  compile_shaders.sh
Engine/include/: Device.h  Engine.h  GraphicsPipeline.h  Model.h  SwapChain.h  VulkanRenderer.h  Window.h
Engine/src/: Device.cpp  Engine.cpp  GraphicsPipeline.cpp  Model.cpp  SwapChain.cpp  VulkanRenderer.cpp  Window.cpp
Game/include/: Application.h  GameWindow.h  main.h
Game/src/: Application.cpp  Game.cpp  GameWindow.cpp  main.cpp
